--- a/Git_Branches_Merges_and_Remotes/explore_california/tours.html
+++ b/Git_Branches_Merges_and_Remotes/explore_california/tours.html
@@ -13,7 +13,7 @@
       <div id="mainHeader">
         <a href="index.html" title="home" class="logo">
           <div id="logo">
-            <h1>Explore California</h1>
+            <h1>Explore California welcome!</h1>
           </div>
         </a>
         <div id="siteNav">
@@ -51,7 +51,7 @@
           </ul>
         </div>
       </div>
-  
+
       <div id="mainContent">
         <div id="contentHeader" class="hasCrumbs">
           <h1>Our Tours</h1>
@@ -64,7 +64,7 @@
             </ul>
           </div>
         </div>
- 
+
         <div id="mainArticle">
           <h1>Something for everyone</h1>
           <img src="assets/images/flag.jpg" alt="Our Tours" class="articleImage" />
@@ -72,7 +72,7 @@
             <p>What type of California experience do you want to have? Are you looking for an exciting adventure? A chance to relax and get away from it all? Or maybe you're looking for a chance to do something entirely new and enriching! As you can see, we've got you covered. We offer tours that are as diverse as California itself! Select any of our tours learn more about pricing and available options.</p>
             <p>If you want to refine your search a bit, feel free to browse tours by <a href="tour_region.html">region</a> or <a href="tour_activity.html">activity</a>. You can even check out our cool interactive Tour Finder to help you choose the tour that will give you the best tour experience based on your specific preferences. If you have any questions about any of our tours, feel free to <a href="contact.html">contact us</a>, or check out our handy <a href="explorers/faq.html">FAQ</a> for a quick overview of our services.</p>
           </div>
- 
+
           <div id="tourDescriptions">
             <div class="tourDescription">
               <h2>Backpack Cal</h2>
@@ -114,7 +114,7 @@
           </div>
         </div>
       </div>
-  
+
       <div id="secondaryContent">
         <div id="specials" class="callOut">
           <h1>Monthly Specials</h1>
@@ -136,7 +136,7 @@
           <p>Among the prehistoric species associated with the La Brea Tar Pits are mammoths, dire wolves, short-faced bears, ground sloths, and the state fossil of California, the sabertoothed cat, <em>Smilodon californicus</em>.</p>
         </div>
       </div>
-      
+
       <div id="pageFooter">
         <div id="quickLinks">
           <h1>Quick Nav</h1>
